--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,9 @@ nbproject
 nodetest.sublime-project
 nodetest.sublime-workspace
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+.ebextensions/*
